# Arise

./: .dockerignore  .env.example  .gitignore  ADR.md  Dockerfile.healer  Makefile  architecture.md  docker-compose.yml  pyproject.toml  readme.md  tech.md
.github/workflows/: ci.yml
agent/: batching.py  cli.py  config.py  generator.py  pyproject.toml  readme.md  runner.py  streamer.py  utils.py
gateway/: app.py  pyproject.toml  readme.md  schemas.py  stream.py
healer/: app.py  healer.py  pyproject.toml  readme.md  utils.py
shared/: constants.py  mongo_repository.py  pg_repository.py  pyproject.toml  schemas.py  settings.py
worker/: app.py  circuit_breaker.py  consumer.py  db_router.py  errors.py  mongo_repository.py  pg_repository.py  pool.py  pyproject.toml  readme.md  redis_client.py  repository.py  utils.py
