[project]
name = "arise"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["agent", "gateway", "worker"]

[tool.uv.workspace]
members = ["agent", "shared", "gateway", "worker"]

[dependency-groups]
dev = ["ruff>=0.11"]

[tool.uv.sources]
agent = { workspace = true }
shared = { workspace = true }
gateway = { workspace = true }
worker = { workspace = true }
