[project]
name = "arise"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["agent", "gateway", "healer", "worker"]

[tool.ruff.lint]
select = ["E", "W", "I", "N", "UP", "SIM", "T20"]

[tool.ruff]
line-length = 120

[tool.uv.workspace]
members = ["agent", "shared", "gateway", "worker", "healer"]

[dependency-groups]
dev = ["ruff>=0.11"]

[tool.uv.sources]
agent = { workspace = true }
shared = { workspace = true }
gateway = { workspace = true }
worker = { workspace = true }
healer = { workspace = true }
