[project]
name = "agent"
version = "0.1.0"
description = "ARISE CLI Agent"
requires-python = ">=3.12"
dependencies = [
    "shared",
    "typer>=0.15",
    "httpx>=0.28",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=25.0",
    "uuid7>=0.1",
]

[project.scripts]
arise = "agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
