[project]
name = "gateway"
version = "0.1.0"
description = "ARISE FastAPI Ingestion Gateway"
requires-python = ">=3.12"
dependencies = [
    "shared",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "uuid7>=0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
