[project]
name = "healer"
version = "0.1.0"
description = "ARISE Healer — Mongo-to-PG replay daemon"
requires-python = ">=3.12"
dependencies = [
    "shared",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
