[project]
name = "shared"
version = "0.1.0"
description = "Shared schemas and models for ARISE"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "uuid7>=0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "." = "shared" }
