[project]
name = "worker"
version = "0.1.0"
description = "ARISE Redis Stream Consumer — Worker Pool"
requires-python = ">=3.12"
dependencies = [
    "shared",
    "redis[hiredis]>=5.2",
    "asyncpg>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
